--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,7 +93,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".profiles"></activity>
+        <activity android:name=".profiles" />
+        <activity android:name=".ListProfile"></activity>
     </application>
 
 </manifest>
