NewProfil/ListProfile.java Manifest pour demarrer ListeProfile en premier.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,13 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCRFTP0gnRcMOf-DL8NLLHh3wYejLRNoMw" />
-        <activity android:name=".ListProfile"></activity>
+        <activity android:name=".ListProfile">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
