--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.moshi:moshi:1.1.0'
+    compile 'org.webjars.npm:react-imageloader:2.1.0'
+    compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
 }
